# oni2sun

./: CMakeLists.txt  README.md  main.cpp  oni_to_sun_converter.cpp  oni_to_sun_converter.h  sun_writer.cpp  sun_writer.h
